Fixed scrollbar overflow when hovering over

--- a/kanagana/src/components/KanaSelect.css
+++ b/kanagana/src/components/KanaSelect.css
@@ -23,6 +23,8 @@
 .kana-select-container{
     display: flex;
     justify-content: center;
-    height: 100vh;
+    height: 60vh;
     flex-direction: column;
+    align-items: center;
+    overflow: hidden;
 }
